Better fix for input height/alignment

--- a/styles/mixins/_forms.scss
+++ b/styles/mixins/_forms.scss
@@ -27,8 +27,7 @@ Forms mixins - Co-op Front-end Toolkit
 @mixin form-field($include-presuffix: true) {
   display: block;
   width: 100%;
-  height: 50px;
-  padding: $quarter-spacing-unit / 2;
+  padding: ($quarter-spacing-unit * .75) ($quarter-spacing-unit / 2);
   background: $white;
   border: 1px solid;
   border-color: $coop-grey;
@@ -36,14 +35,8 @@ Forms mixins - Co-op Front-end Toolkit
   outline: 0;
   transition: all 0.3s ease-in-out;
   font-size: em-calc(20);
-  line-height: 1.6;
-
-  @include ie(9) {
-    padding-bottom: 14px;
-  }
 
   &.input-strong {
-    height: 52px;
     border: 2px solid;
     border-color: $coop-grey;
   }
@@ -323,12 +316,13 @@ Forms mixins - Co-op Front-end Toolkit
 @mixin form-presuffix {
   display: block;
   float: left;
-  padding: $quarter-spacing-unit / 2 $quarter-spacing-unit;
+  padding: ($quarter-spacing-unit * .75) $quarter-spacing-unit;
   border: 1px solid $coop-grey;
   background: $offwhite;
   font-size: em-calc(20);
   text-align: center;
-  line-height: 1.6;
+  line-height: normal;
+
   &.input-strong {
     border: 2px solid $coop-grey;
   }
@@ -339,6 +333,7 @@ Forms mixins - Co-op Front-end Toolkit
   border-right: 0;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+
   &.input-strong {
     border-right: 0;
   }
@@ -349,6 +344,7 @@ Forms mixins - Co-op Front-end Toolkit
   border-left: 0;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+
   &.input-strong {
     border-left: 0;
   }
